tests/lean/bigUnivOffsets.lean
#check Type 100000000

universes u

#check Type (u + 10000000)
